syntax = "proto3";

service RecetteService {
  rpc GetRecette (RecetteRequest) returns (RecetteResponse);
  rpc GetRecettesParCategorie (CategorieRequest) returns (RecetteListResponse);
  rpc GetRecettes (Empty) returns (RecetteListResponse);
  rpc CreateRecette (CreateRecetteRequest) returns (RecetteResponse);
  rpc UpdateRecette (UpdateRecetteRequest) returns (RecetteResponse);
  rpc DeleteRecette (RecetteRequest) returns (DeleteResponse);

}

message RecetteRequest {
  string id = 1;
}

message CategorieRequest {
  string categorie = 1;
}

message CreateRecetteRequest {
  string titre = 1;
  string description = 2;
  string categorie = 3;
  string createurId = 4;
}

message UpdateRecetteRequest {
  string id = 1;
  string titre = 2;
  string description = 3;
  string categorie = 4;
}

message RecetteResponse {
  string id = 1;
  string titre = 2;
  string description = 3;
  string categorie = 4;
}

message Empty {}
message RecetteListResponse {
repeated RecetteResponse recettes = 1;
}

message DeleteResponse {
  bool success = 1;
}